force-app/main/default/Objects/ContentTopics__c/ContentTopics__c.object-meta.xml
<CustomObject>
    <description>Theme or focus for content (articles, podcasts, videos, courses, ebooks, etc)</description>
    <label>Content Topic</label>
    <nameField>
        <displayFormat>CT{000}</displayFormat>
        <label>Content Topic Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Content Topics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>