force-app/main/default/Objects/ContentTopics__c/fields/ContentTopicInformation__c.field-meta.xml
<CustomField>
    <fullName>ContentTopicInformation__c</fullName>
    <complianceGroup>NA</complianceGroup>
    <description>Information about the content topic including links to resources</description>
    <inlineHelpText>Information about the content topic including links to resources</inlineHelpText>
    <label>Content Topic Information</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>