force-app/main/default/Objects/ContentTopics__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Working reference for the subject</description>
    <inlineHelpText>Working reference for the subject</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>