force-app/main/default/Objects/ContentTopics__c/fields/Total_Content_Items__c.field-meta.xml
<CustomField>
    <fullName>Total_Content_Items__c</fullName>
    <complianceGroup>NA</complianceGroup>
    <description>Total related content items</description>
    <inlineHelpText>Total related content items</inlineHelpText>
    <label>Total Content Items</label>
    <summaryForeignKey>ContentItem__c.ContentTopic__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>