force-app/main/default/Objects/ContentTopics__c/fields/Total_Publications__c.field-meta.xml
<CustomField>
    <fullName>Total_Publications__c</fullName>
    <description>Total content item publications for the topic</description>
    <inlineHelpText>Total content item publications for the topic</inlineHelpText>
    <label>Total Publications</label>
    <summarizedField>ContentItem__c.Total_Publications__c</summarizedField>
    <summaryForeignKey>ContentItem__c.ContentTopic__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>