force-app/main/default/Objects/ContentTopics__c/fields/Total_Published_Articles__c.field-meta.xml
<CustomField>
    <fullName>Total_Published_Articles__c</fullName>
    <description>Total subject items with status of published or completed and format type of article or article + video</description>
    <inlineHelpText>Total subject items with status of published or completed and format type of article or article + video</inlineHelpText>
    <label>Total Published Articles</label>
    <summaryFilterItems>
        <field>ContentItem__c.Format__c</field>
        <operation>equals</operation>
        <value>Article, Article + Video</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>ContentItem__c.Status__c</field>
        <operation>equals</operation>
        <value>Published</value>
    </summaryFilterItems>
    <summaryForeignKey>ContentItem__c.ContentTopic__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>