force-app/main/default/Objects/ContentTopics__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Total_Content_Items__c</columns>
    <columns>ContentTopicInformation__c</columns>
    <columns>Total_Publications__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>