force-app/main/default/Objects/ContentTopics__c/listViews/All_Topics.listView-meta.xml
<ListView>
    <fullName>All_Topics</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Content_Items__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Topics</label>
</ListView>