force-app/main/default/Objects/ContentTopics__c/listViews/TopicsWithNoContent.listView-meta.xml
<ListView>
    <fullName>TopicsWithNoContent</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Total_Content_Items__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Topics with No Content</label>
</ListView>